[package]
name = "ltsv"
version = "0.1.5"
authors = ["glaceef <masaki7322_art@yahoo.co.jp>"]
edition = "2018"

license = "MIT"
description = "This is a ltsv file parser written in Rust"
repository = "https://github.com/glaceef/ltsv"
readme = "README.md"
keywords = ["ltsv"]

[dependencies]

[[example]]
name = "load"

[[example]]
name = "create"

[[example]]
name = "append"
